2004-10-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/string.n (map): Rewrote to clarify that we don't just map
	single characters. [Bug 1048005]
	* doc/info.n (procs): Clarified that the pattern argument may have
	namespace separators in it. [Bug 1047928]

	* tests/cmdAH.test (cmdAH-8.45): Simplify in the hope that the
	reasons for [Bug 1053908] will become clearer.

2004-10-25  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c (IllegalExprOperandType,TclExecuteByteCode):
	Removed several DECACHE_INFO/CACHE_INFO pairs that are no longer
	needed for protection because routines like Tcl_SetErrorCode() and
	Tcl_AddErrorInfo() can no longer re-enter bytecode execution.

	* generic/tclResult.c (TclProcessReturn): Bug fix.  Be sure that
	a missing -errorinfo option when code == TCL_ERROR causes the
	errorInfo field to get reset.

	* tests/thread.test (thread-4.4): Test depended on a ::errorInfo
	value initialized to "".  Added code to test to setup that requirement.

	* library/auto.tcl	Purged Tcl's script library of all
	* library/clock.tcl	remaining references to global vars
	* library/init.tcl	::errorInfo and ::errorCode.

	* generic/tclMain.c (Tcl_Main):	Updated to make use of
	TclGetReturnOptions instead of ::errorInfo variable.

	* generic/tclInterp.c (tclInit): Bug fix.  Access dict variables
	with [dict get], not array syntax.  

2004-10-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/tm.test: Rewrote the tests to actually perform syntax
	checks on the public API. Added a new test (currently failing) to
	indicate that the test suite is not complete yet.
	* library/tm.tcl (path): Rewrote to turn this command into an
	ensemble to make it faster and simpler.

2004-10-24  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCmdIL.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclTrace.c: defined new macros to get/set the flags of 
	variables. The only files that still access the flag values