@@ -34733,6 +34733,14 @@ test clock-31.4 {system locale} \
 	namespace eval ::tcl::clock {
 	    namespace import -force ::testClock::registry
 	}
+	if { [info exists env(TZ)] } {
+	    set oldTZ $env(TZ)
+	    unset env(TZ)
+	}
+	if { [info exists env(TCL_TZ)] } {
+	    set oldTclTZ $env(TCL_TZ)
+	    unset env(TCL_TZ)
+	}
 	::tcl::clock::ClearCaches
     } \
     -body {
@@ -34741,6 +34749,12 @@ test clock-31.4 {system locale} \
     -cleanup {
 	namespace eval ::tcl::clock {
 	    rename registry {}
+	}
+	if { [info exists oldTclTZ] } {
+	    set env(TCL_TZ) $oldTclTZ
+	}
+	if { [info exists oldTZ] } {
+	    set env(TZ) $oldTZ
 	}
 	::tcl::clock::ClearCaches
     } \
@@ -34753,6 +34767,14 @@ test clock-31.5 {system locale} \
 	namespace eval ::tcl::clock {
 	    namespace import -force ::testClock::registry
 	}
+	if { [info exists env(TZ)] } {
+	    set oldTZ $env(TZ)
+	    unset env(TZ)
+	}
+	if { [info exists env(TCL_TZ)] } {
+	    set oldTclTZ $env(TCL_TZ)
+	    unset env(TCL_TZ)
+	}
 	::tcl::clock::ClearCaches
     } \
     -body {
@@ -34761,6 +34783,12 @@ test clock-31.5 {system locale} \
     -cleanup {
 	namespace eval ::tcl::clock {
 	    rename registry {}
+	}
+	if { [info exists oldTclTZ] } {
+	    set env(TCL_TZ) $oldTclTZ
+	}
+	if { [info exists oldTZ] } {
+	    set env(TZ) $oldTZ
 	}
 	::tcl::clock::ClearCaches
     } \
@@ -34773,6 +34801,14 @@ test clock-31.6 {system locale} \
 	namespace eval ::tcl::clock {
 	    namespace import -force ::testClock::registry
 	}
+	if { [info exists env(TZ)] } {
+	    set oldTZ $env(TZ)
+	    unset env(TZ)
+	}
+	if { [info exists env(TCL_TZ)] } {
+	    set oldTclTZ $env(TCL_TZ)
+	    unset env(TCL_TZ)
+	}
 	::tcl::clock::ClearCaches
     } \
     -body {
@@ -34781,6 +34817,12 @@ test clock-31.6 {system locale} \
     -cleanup {
 	namespace eval ::tcl::clock {
 	    rename registry {}
+	}
+	if { [info exists oldTclTZ] } {
+	    set env(TCL_TZ) $oldTclTZ
+	}
+	if { [info exists oldTZ] } {
+	    set env(TZ) $oldTZ
 	}
 	::tcl::clock::ClearCaches
     } \
